# wstr-literal

./: CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/: dependabot.yaml
.github/workflows/: release-plz.yml  test.yml
impl/: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
tests/: test.rs
wstr-literal_impl/: CHANGELOG.md  Cargo.toml  README.md
wstr-literal_impl/src/: lib.rs
