[package]
name = "wstr-literal"
description = "Proc macros for building UTF-16 null-terminated arrays at compile time."
version = "0.1.0"
edition = "2021"
authors = ["Vabock <vabock@gmail.com>"]
keywords = ["const", "static", "utf-16", "wchar", "macro"]
categories = ["encoding", "os::windows-apis"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/vabock/wstr-literal"
documentation = "https://docs.rs/wstr-literal"
readme = "README.md"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
wstr-literal_impl = { version = "0.1.0", path = "wstr-literal_impl" }

[lib]
proc-macro = true

[workspace]
members = ["wstr-literal_impl"]
